--- a/modules/group/client/views/group-home.client.view.html
+++ b/modules/group/client/views/group-home.client.view.html
@@ -48,22 +48,25 @@
           </span>
         </div>
       </div>
-      <div class="comments" ng-if="topic.comments.length">
+      <div class="comments" ng-if="topic.comments.length" style="margin-top: 5px">
         <div class="row">
           <div class="col-sm-12">
             <div class="page-header">
               <h3><small class="pull-right">{{topic.comments.length+' bình luận'}}</small> Bình luận </h3>
             </div>
-            <div class="comments-list" ng-repeat="comment in topic.comments |  orderBy:'-createdAt'" style="padding-top: 10px">
+            <div class="comments-list" ng-repeat="comment in topic.comments |  orderBy:'-createdAt' | limitTo: 5" style="padding-top: 10px">
               <div class="media">
-                <a href="#">
-                  <img ng-src="{{comment.createdBy.profileImageURL?comment.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}" alt="{{comment.createdBy.displayName}}" class="header-profile-image" style="border-radius: 0"/>
-                  {{comment.createdBy.displayName}}
-                </a>
-                <div class="media-body" style="padding-left: 50px; padding-top: 5px">
-                  <p>{{comment.content}}</p>
+                <div class="col-xs-1">
+                  <img ng-src="{{comment.createdBy.profileImageURL?comment.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}" alt="{{comment.createdBy.displayName}}" class="header-profile-image"/>
+                </div>
+                <div class="col-xs-11">
+                  <a href="#">
+                    {{comment.createdBy.displayName}}
+                  </a>
+                  {{comment.content}}
 
                   <p><small><a href="#" ng-click="">Thích </a><span>({{comment.like}})</span></small></p>
+                </div>
                 </div>
               </div>
             </div>
