--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -9,6 +9,12 @@
     <a ui-sref="home" class="navbar-brand">EClass</a>
   </div>
   <nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
+    <form class="navbar-form navbar-left" role="search" novalidate>
+      <div class="form-group">
+        <input type="text" class="form-control" ng-model="searchKey" placeholder="Tìm kiếm lớp học">
+      </div>
+      <button type="submit" class="btn btn-default" ng-click="searchClass(searchKey)"><span><i class="fa fa-search"></i></span></button>
+    </form>
     <ul class="nav navbar-nav" ng-if="menu.shouldRender(authentication.user);">
       <li ng-repeat="item in menu.items | orderBy: 'position'" ng-if="item.shouldRender(authentication.user);" ng-switch="item.type" ng-class="{ active: $state.includes(item.state), dropdown: item.type === 'dropdown' }" class="{{item.class}}" dropdown="item.type === 'dropdown'">
         <a ng-switch-when="dropdown" class="dropdown-toggle" dropdown-toggle role="button">{{::item.title}}&nbsp;<span class="caret"></span></a>
